# Euphoriae

./: CHANGELOGS.MD  README.md  latest.md
.github/workflows/: build-release.yml  ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/engine/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  jni_bridge.cpp
app/src/main/java/com/oss/euphoriae/: MainActivity.kt
app/src/main/java/com/oss/euphoriae/data/class/: AudioEffectsManager.kt  EuphoriaePlayer.kt
app/src/main/java/com/oss/euphoriae/data/local/: MusicDao.kt  MusicDatabase.kt
app/src/main/java/com/oss/euphoriae/data/model/: Album.kt  CachedLyrics.kt  Lyrics.kt  Playlist.kt
app/src/main/java/com/oss/euphoriae/data/preferences/: AudioPreferences.kt  ThemePreferences.kt
app/src/main/java/com/oss/euphoriae/data/remote/: GitHubModels.kt  GitHubService.kt  LrclibModels.kt  LrclibService.kt
app/src/main/java/com/oss/euphoriae/data/repository/: MusicRepository.kt
app/src/main/java/com/oss/euphoriae/engine/: AudioEngine.kt  NativeAudioProcessor.kt  NativeRenderersFactory.kt
app/src/main/java/com/oss/euphoriae/service/: MusicPlaybackService.kt
app/src/main/java/com/oss/euphoriae/ui/components/: AlbumCard.kt  MiniPlayer.kt  PlaylistCard.kt  PlaylistCardCompact.kt  TopAppBar.kt
app/src/main/java/com/oss/euphoriae/ui/screens/: ContributorsScreen.kt  HomeScreen.kt  (+5 more)
app/src/main/java/com/oss/euphoriae/utils/: LrcParser.kt
app/src/main/java/com/oss/euphoriae/widget/: WidgetQueueManager.kt
docs/: index.html  script.js  styles.css
gradle/: libs.versions.toml
(+2 files in other folders)
